--- a/design/auth/login.html
+++ b/design/auth/login.html
@@ -17,6 +17,7 @@
         <div class="nav-btns">
           <button onclick="location.href='/'">러닝코스</button>
           <button onclick="location.href='/talk'">러닝 톡</button>
+          <button onclick="location.href='/찜목록모음나오는링크'">내 프로필</button>
         </div>
       </div>
 
