--- a/design/auth/mypage-before.html
+++ b/design/auth/mypage-before.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>로그인</title>
+    <title>내 프로필(로그인 전)</title>
     <link href="../main.css" rel="stylesheet" />
   </head>
   <body>
@@ -21,7 +21,7 @@
         </div>
       </div>
 
-      <!-- 내용 -->
+      <!-- 로그인 박스 -->
       <div class="content">
         <div class="box">
           <form id="login-form" action="/auth/login" class="form" method="post">
