[feat] 러닝톡 디자인 추가

--- a/design/auth/mypage-after.html
+++ b/design/auth/mypage-after.html
@@ -34,6 +34,19 @@
         <!-- 찜 목록 -->
         <div class="box">
           <p class="mypage-like-title">찜 목록</p>
+
+          <!-- 찜한 톡 하나 -->
+          <div class="box">
+            <div class="talk-title-div">
+              <div class="talk-title-info">
+                <p class="talk-title">게시물 타이틀</p>
+                <p class="talk-author">✍️ 작성자</p>
+              </div>
+            </div>
+            <div>
+              <p>게시글 내용</p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
