--- a/design/talk/talk.html
+++ b/design/talk/talk.html
@@ -24,10 +24,38 @@
       <!-- 내용 -->
       <div class="content">
         <!-- 톡 추가 버튼 -->
-        <button class="btn" onclick="location.href='/write'">➕ 러닝톡 추가하기</button>
+        <button class="btn mb-10" onclick="location.href='/write'">➕ 러닝톡 추가하기</button>
 
         <!-- 톡 하나 -->
-         
+        <div class="box">
+          <div class="talk-title-div">
+            <div class="talk-title-info">
+              <p class="talk-title">게시물 타이틀</p>
+              <p class="talk-author">✍️ 작성자</p>
+            </div>
+            <div class="talk-title-like twit-follow">♥️</div>
+          </div>
+          <div class="talk-content-div">
+            <p>게시글 내용</p>
+          </div>
+          <div class="talk-comment-div">
+            <!-- 댓글 입력창 -->
+            <div class="talk-comment-input-div">
+              <input
+                type="text"
+                action="/post/comment"
+                id="commentInput"
+                placeholder="댓글을 입력하세요" />
+              <button id="commentSubmitBtn" class="btn">댓글 달기</button>
+            </div>
+
+            <!-- 댓글 하나 -->
+            <div class="talk-comment">
+              <p class="talk-comment-author">😀 작성자</p>
+              <p>댓글 내용</p>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </body>
